# goit-hw-7

./: cla_crud.py  commands.py  config.ini  main.py  my_select.py  pyproject.toml  seed.py
examples/lesson01/: example_core.py
migrations/versions/: 7958e0db9152_init.py
src/: models.py
