[tool.poetry]
name = "goit-hw-7"
version = "0.1.0"
description = ""
authors = ["Dmytro-Kruhlov <hazzy1451@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.21"
aiosqlite = "^0.19.0"
psycopg2 = "^2.9.7"
faker = "^19.6.2"
alembic = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"